--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="page__screen screen">
                     <div class="screen__content">
-                        <h2 class="screen__title">Попа</h2>
+                        <h2 class="screen__title">Раздел 2</h2>
                     </div>
                     <div class="screen__text">
                         <p>Текст</p>
